Chage | with dot in title

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     <section id="hero" class="parallax">
         <div class="hero-content">
             <h1 data-aos="fade-down">Raunak Singwi</h1>
-            <p data-aos="fade-up">Software Engineer | Innovator | Problem Solver</p>
+            <p data-aos="fade-up">Software Engineer • Innovator • Problem Solver</p>
             <a href="#profile" class="btn btn-primary" data-aos="zoom-in">Learn More</a>
         </div>
     </section>
