Update public speaking section

--- a/index.html
+++ b/index.html
@@ -577,16 +577,16 @@
                     </ul>
                 </div>
 
-                <div class="job-entry partial-experience" data-aos="fade-up" data-aos-delay="400">
-                    <h3>Member of Technical Staff 2</h3>
-                    <h4>VMware - NSX Platform</h4>
-                    <p class="timeline">August 2019 - March 2021</p>
-                    <ul>
-                        <li>Worked on the development of a metrics collection platform for NSX.</li>
-                    </ul>
-                </div>
-
                 <div class="hidden-experience">
+                    <div class="job-entry partial-experience" data-aos="fade-up" data-aos-delay="400">
+                        <h3>Member of Technical Staff 2</h3>
+                        <h4>VMware - NSX Platform</h4>
+                        <p class="timeline">August 2019 - March 2021</p>
+                        <ul>
+                            <li>Worked on the development of a metrics collection platform for NSX.</li>
+                        </ul>
+                    </div>
+
                     <div class="job-entry" data-aos="fade-up" data-aos-delay="500">
                         <h3>Member of Technical Staff 1</h3>
                         <h4>VMware - vCenter Platform</h4>
@@ -627,6 +627,26 @@
                 <span class="skill-tag">Django</span>
                 <span class="skill-tag">REST API Development</span>
             </div>
+        </section>
+
+        <!-- Public Speaking Awards Section -->
+        <section class="section" id="public-speaking" data-aos="fade-up">
+            <div class="section-header">
+                <h2>Public Speaking Awards</h2>
+            </div>
+            <ul>
+                <li data-aos="fade-left" data-aos-delay="100">2nd Rank, National Level Debate Competition at Jamia Millia Islamia University, New Delhi (February 2016)</li>
+                <li data-aos="fade-left" data-aos-delay="150">1st Rank, Inter-Collegiate Debate Competition, Tirpude College of Management, Nagpur (February 2017)</li>
+                <li data-aos="fade-left" data-aos-delay="200">1st Rank, Inter-Collegiate Extempore Competition, Tirpude College of Management, Nagpur (February 2017)</li>
+                <li data-aos="fade-left" data-aos-delay="250">Best Speaker, Impromptu Speech at IBC Titans Toastmasters Club, Oracle Corporation, Bangalore (February 2019)</li>
+                <li data-aos="fade-left" data-aos-delay="300">3rd Rank, Impromptu Speech at Toastmasters Zonal Level Contest, IIM Bangalore (February 2019)</li>
+                <li data-aos="fade-left" data-aos-delay="350">3rd Rank, Vidharbha Level Elocution Competition, C.P. and Berar college, Nagpur (March 2017)</li>
+                <li data-aos="fade-left" data-aos-delay="400">1st Rank, Orator Of The Year, NSS unit, Ramdeobaba College of Engineering and Management, Nagpur (2015)</li>
+                <li data-aos="fade-left" data-aos-delay="450">1st Rank (Team of 5), Youth Parliament, Ramdeobaba College of Engineering and Management, Nagpur (2016)</li>
+                <li data-aos="fade-left" data-aos-delay="500">3rd Rank, Inter-College Debate & Extempore Competition, Government Institute of Forensic Sciences, Nagpur (January 2017)</li>
+                <li data-aos="fade-left" data-aos-delay="550">3rd Rank, University Level Inter-Collegiate Debate Competition, Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur (January 2017)</li>
+                <li data-aos="fade-left" data-aos-delay="600">3rd Rank, Intra-College debate competition, Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur (October 2016)</li>
+            </ul>
         </section>
 
         <!-- Education Section -->
