--- a/index.html
+++ b/index.html
@@ -525,14 +525,14 @@
                     <img src="pics/profile.jpeg" alt="Raunak Singwi" id="profile-pic" class="img-fluid" data-aos="zoom-in">
                 </div>
                 <div class="col-md-8">
-                    <p data-aos="fade-left" data-aos-delay="100">Experienced software engineer with a strong commitment to crafting clean, well-designed, and unit-tested code. Proven track record of innovation and technical leadership.</p>
+                    <p data-aos="fade-left" data-aos-delay="100"></p>
                     <div class="social-icons" data-aos="fade-up" data-aos-delay="200">
                         <a href="http://www.github.com/raunaksingwi" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/raunak-singwi-407087bb/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://www.youtube.com/channel/UCS3X-xdL0iS0hdHHShrMifw?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
                         <a href="https://twitter.com/raunak_singwi" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.instagram.com/raunaksingwi/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="mailto:raunaksingwi7@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                        <a href="mailto:raunaksingwi7@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
@@ -544,11 +544,12 @@
                 <h2>Key Achievements</h2>
             </div>
             <ul>
-                <li data-aos="fade-left" data-aos-delay="100">12 US Patents (10 published; 2 pending)</li>
-                <li data-aos="fade-left" data-aos-delay="200">2-time Winner of VMware Global Hackathon</li>
-                <li data-aos="fade-left" data-aos-delay="300">4-time Acceptance at VMware Research & Development Innovation Offsite (acceptance rate ~10%)</li>
-                <li data-aos="fade-left" data-aos-delay="400">2-time Runner-up at VMware Site Level Hackathon</li>
-                <li data-aos="fade-left" data-aos-delay="500">Accepted at VMware xLabs program, VMware's internal incubator for innovative off-roadmap ideas</li>
+                <li data-aos="fade-left" data-aos-delay="100">Recipient of the <b>US O1 Visa</b>, recognizing exceptional ability and achievement in software engineering.</li>
+                <li data-aos="fade-left" data-aos-delay="200">Holder of <b>12 US patents</b>, demonstrating a strong focus on innovation and problem-solving.</li>
+                <li data-aos="fade-left" data-aos-delay="300"><b>2x VMware Global Hackathon Winner</b>, recognized for collaborative excellence in rapid prototyping.</li>
+                <li data-aos="fade-left" data-aos-delay="400">Selected <b>4x</b> for VMware R&D Innovation Offsite, with an exclusive ~10% acceptance rate, validating elite technical contributions.</li>
+                <li data-aos="fade-left" data-aos-delay="500">Admitted to VMware xLabs, an incubator program fostering disruptive off-roadmap ideas.</li>
+                <li data-aos="fade-left" data-aos-delay="600"><b>2x Runner-Up</b> at VMware Site-Level Hackathon, showcasing creative problem-solving.</li>
             </ul>
         </section>
 
@@ -564,11 +565,11 @@
                     <h4>Cloaked</h4>
                     <p class="timeline">January 2023 - Present</p>
                     <ul>
-                        <li>Early employee, member of the backend platform team</li>
-                        <li>Building new product features, such as the data deletion offering</li>
-                        <li>Rearchitecting APIs, database schemas and optimising queries</li>
-                        <li>Implementing spam prevention using rule-based filtering and third-party machine learning models</li>
-                        <li>Developing bad actor mitigation strategies</li>
+                        <li>As an early hire, drove backend excellence by building scalable and efficient systems.</li>
+                        <li>Designed and implemented high-impact product features, eg: <a href="https://www.cloaked.com/features/data-removal" target="_blank">data removal</a>.</li>
+                        <li>Revamped APIs and database schemas, enhancing <b>performance</b> and <b>maintainability</b>.</li>
+                        <li>Architected <b>spam prevention systems</b> leveraging heuristic algorithms and cutting-edge AI tools, ensuring platform integrity.</li>
+                        <li>Devised advanced strategies to mitigate malicious activity, safeguarding users at scale.</li>
                     </ul>
                 </div>
 
@@ -577,45 +578,28 @@
                     <h4>Salesforce</h4>
                     <p class="timeline">May 2022 - January 2023</p>
                     <ul>
-                        <li>Worked on the development of a monitoring platform for running synthetic tests which ran 200M tests per day.</li>
+                        <li>Worked on the development of a <b>synthetic monitoring platform</b>, executing 200M+ tests daily, ensuring enterprise-grade reliability and performance.</li>
                     </ul>
                 </div>
 
                 <div class="job-entry" data-aos="fade-up" data-aos-delay="300">
-                    <h3>Member of Technical Staff 3</h3>
-                    <h4>VMware - Advanced Technology Group, Office of the CTO</h4>
+                    <h3>Member of Technical Staff 1 - 3</h3>
+                    <h4>VMware</h4>
                     <p class="timeline">March 2021 - May 2022</p>
                     <ul>
-                        <li>Designed and developed a Kubernetes-on-Router solution that leverages spare resources on a managed SD-WAN router to securely deploy and orchestrate containerised applications on the edge.</li>
-                        <li>Project Santa Cruz. VMworld Demo</li>
+                        <li>Designed and developed a Kubernetes-on-Router solution that leverages spare resources on a managed SD-WAN router to securely deploy and orchestrate containerised applications on the edge (<a href="https://octo.vmware.com/announcing-project-santa-cruz-and-more/" target="_blank">Project Santa Cruz</a> showcased at <a href="https://www.youtube.com/watch?v=deMUBez9Nrc" target="_blank">VMworld 2021</a>).</li>
+                        <li>Worked on the development of a <b>metrics collection platform</b>.</li>
+                        <li>Engineered critical features for automated installation of third-party appliances on <b>vCenter Server</b>, streamlining deployment workflows.</li>
                     </ul>
                 </div>
 
                 <div class="hidden-experience">
                     <div class="job-entry partial-experience" data-aos="fade-up" data-aos-delay="400">
-                        <h3>Member of Technical Staff 2</h3>
-                        <h4>VMware - NSX Platform</h4>
-                        <p class="timeline">August 2019 - March 2021</p>
-                        <ul>
-                            <li>Worked on the development of a metrics collection platform for NSX.</li>
-                        </ul>
-                    </div>
-
-                    <div class="job-entry" data-aos="fade-up" data-aos-delay="500">
-                        <h3>Member of Technical Staff 1</h3>
-                        <h4>VMware - vCenter Platform</h4>
-                        <p class="timeline">July 2018 - July 2019</p>
-                        <ul>
-                            <li>Developed the stage and install features for installing 1st party appliance (NSX) on vCenter Server.</li>
-                        </ul>
-                    </div>
-
-                    <div class="job-entry" data-aos="fade-up" data-aos-delay="600">
                         <h3>R&D Intern</h3>
-                        <h4>VMware - vCenter Platform</h4>
+                        <h4>VMware</h4>
                         <p class="timeline">January 2018 - July 2018</p>
                         <ul>
-                            <li>Developed a feature/tool that changes the deployment topology of vCenter Server at runtime from having an external SSO appliance (VM) to an embedded SSO.</li>
+                            <li>Developed an innovative runtime tool to transform vCenter Server topologies from external to embedded SSO, significantly reducing deployment complexity.</li>
                         </ul>
                     </div>
                 </div>
