Update about me

--- a/index.html
+++ b/index.html
@@ -525,7 +525,8 @@
                     <img src="pics/profile.jpeg" alt="Raunak Singwi" id="profile-pic" class="img-fluid" data-aos="zoom-in">
                 </div>
                 <div class="col-md-8">
-                    <p data-aos="fade-left" data-aos-delay="100"></p>
+                    <p data-aos="fade-left" data-aos-delay="100">Software engineer with a focus on architecting scalable software and a strong commitment to crafting clean code.
+                    </p>
                     <div class="social-icons" data-aos="fade-up" data-aos-delay="200">
                         <a href="http://www.github.com/raunaksingwi" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/raunak-singwi-407087bb/" target="_blank"><i class="fab fa-linkedin"></i></a>
