--- a/index.html
+++ b/index.html
@@ -500,6 +500,18 @@
             border-bottom: none;
             padding-bottom: 0;
         }
+
+        .job-entry h4 {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .company-logo {
+            width: 24px;
+            height: 24px;
+            object-fit: contain;
+        }
     </style>
 </head>
 <body>
@@ -563,7 +575,7 @@
             <div id="experience-list">
                 <div class="job-entry" data-aos="fade-up" data-aos-delay="100">
                     <h3>Senior Software Engineer</h3>
-                    <h4>Cloaked</h4>
+                    <h4><img src="pics/cloaked.png" alt="Cloaked" class="company-logo">Cloaked</h4>
                     <p class="timeline">January 2023 - Present</p>
                     <ul>
                         <li>As an early hire, drove backend excellence by building scalable and efficient systems.</li>
@@ -576,7 +588,7 @@
 
                 <div class="job-entry" data-aos="fade-up" data-aos-delay="200">
                     <h3>Senior Member of Technical Staff</h3>
-                    <h4>Salesforce</h4>
+                    <h4><img src="pics/salesforce.png" alt="Salesforce" class="company-logo">Salesforce</h4>
                     <p class="timeline">May 2022 - January 2023</p>
                     <ul>
                         <li>Worked on the development of a <b>synthetic monitoring platform</b>, executing 200M+ tests daily, ensuring enterprise-grade reliability and performance.</li>
@@ -585,7 +597,7 @@
 
                 <div class="job-entry" data-aos="fade-up" data-aos-delay="300">
                     <h3>Member of Technical Staff 1 - 3</h3>
-                    <h4>VMware</h4>
+                    <h4><img src="pics/vmw.png" alt="VMware" class="company-logo">VMware</h4>
                     <p class="timeline">March 2021 - May 2022</p>
                     <ul>
                         <li>Designed and developed a Kubernetes-on-Router solution that leverages spare resources on a managed SD-WAN router to securely deploy and orchestrate containerised applications on the edge (<a href="https://octo.vmware.com/announcing-project-santa-cruz-and-more/" target="_blank">Project Santa Cruz</a> showcased at <a href="https://www.youtube.com/watch?v=deMUBez9Nrc" target="_blank">VMworld 2021</a>).</li>
@@ -597,7 +609,7 @@
                 <div class="hidden-experience">
                     <div class="job-entry partial-experience" data-aos="fade-up" data-aos-delay="400">
                         <h3>R&D Intern</h3>
-                        <h4>VMware</h4>
+                        <h4><img src="pics/vmw.png" alt="VMware" class="company-logo">VMware</h4>
                         <p class="timeline">January 2018 - July 2018</p>
                         <ul>
                             <li>Developed an innovative runtime tool to transform vCenter Server topologies from external to embedded SSO, significantly reducing deployment complexity.</li>
