--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                         <a href="https://www.linkedin.com/in/raunak-singwi-407087bb/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://www.youtube.com/channel/UCS3X-xdL0iS0hdHHShrMifw?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
                         <a href="https://twitter.com/raunak_singwi" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/raunaksingwi/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/cost.to.candidate/reels/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="mailto:raunaksingwi7@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
@@ -672,7 +672,7 @@
 
     <footer>
         <div class="container text-center">
-            <p>&copy; 2024 Raunak Singwi. All rights reserved.</p>
+            <p>&copy; 2025 Raunak Singwi. All rights reserved.</p>
         </div>
     </footer>
 
